cambios en el index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>
                     <a href="pages/nosotros.html ">Nosotros</a>
                     <ul class="sub-menu ">
-                        <li>Reseña</li>
+                        <li>Reseña FO</li>
                         <li>Misión</li>
                         <li>Visión</li>
                         <li>Valores</li>
