cambios en Menú del Nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="/ ">Inicio</a>
                 </li>
                 <li>
-                    <a href="pages/nosotros.html ">Nosotros</a>
+                    <a href="pages/nosotros.html">Nosotros</a>
                     <ul class="sub-menu ">
                         <li>Reseña</li>
                         <li>Misión</li>
@@ -32,12 +32,12 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="pages/licenciatura.html ">Licenciatura</a>
+                    <a href="pages/licenciatura.html">Licenciatura</a>
                     <ul class="sub-menu">
-                        <li>Secretaría Administrativa</li>
-                        <li>Secretaria Académica</li>
+                        <li>Sub-Dirección</li>
+                        <li>Académicos</li>
                         <li>Planeación</li>
-                        <li>Inglés Curricular</li>
+                        <li>Inglés</li>
                     </ul>
                 </li>
                 <li>
